# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-01-09  Christian Heller  <christian.heller@tuxtax.de>
        * Continue http response encoder (header entries)

2011-01-08  Christian Heller  <christian.heller@tuxtax.de>
        * Continue http response encoder (general structure)

2011-01-07  Christian Heller  <christian.heller@tuxtax.de>
        * Prepare http response encoder

2011-01-05  Christian Heller  <christian.heller@tuxtax.de>
        * Factor out model diagram encoder functions to separate files in sub directory
        * Fix error that uri details were not displayed in model diagram (wrong constant count)
        * Make html encoder work again

2011-01-03  Christian Heller  <christian.heller@tuxtax.de>
        * Fix file "uri_decoder.c" and others, to make uri parsing work correctly

2011-01-02  Christian Heller  <christian.heller@tuxtax.de>
        * Distinguish four kinds of http request uri (no resource, absolute uri, authority form, absolute path)

2011-01-01  Christian Heller  <christian.heller@tuxtax.de>
        * Implement decoding of percent-encoded ASCII character arrays
        * Change copyright year to 2011 in all CYBOI source code files
        * Prepare distinction of request uri types (server "*", absolute, authority, path)

2010-12-31  Christian Heller  <christian.heller@tuxtax.de>
        * Figure out problem with uri handling (percent-decoding missing)

2010-12-30  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-29  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-28  Christian Heller  <christian.heller@tuxtax.de>